@@ -10,6 +10,7 @@ class MenuPool(object):
         self.menus = {}
         self.modifiers = []
         self.discovered = False
+        self.cache_keys = set()
         
     def discover_menus(self):
         if self.discovered:
@@ -42,6 +43,7 @@ class MenuPool(object):
     def _build_nodes(self, request, site_id):
         lang = request.LANGUAGE_CODE
         key = "menu_nodes_%s_%s" % (lang, site_id)
+        self.cache_keys.add(key)
         cached_nodes = cache.get(key, None)
         if cached_nodes:
             return cached_nodes
@@ -135,5 +137,9 @@ class MenuPool(object):
             if node.attr.get(name, None) == value:
                 found.append(node)
         return found
+    
+    def invalidate_cache(self):
+        for key in self.cache_keys:
+            cache.delete(key)
      
 menu_pool = MenuPool()
